kubernetes/apps/git-pull-request-dashboard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-pull-request-dashboard
  namespace: automation
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: git-pull-request-dashboard
spec:
  rules:
    - host: pr-dashboard.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git-pull-request-dashboard
                port:
                  number: 80
    - host: pr-dashboard.sargeant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git-pull-request-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - pr-dashboard.sargeant.co
      secretName: pr-dashboard-tls
